--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test-block": "node tests/block.js",
-    "test-dag": "node tests/dag.js",
-    "test-mfs": "node tests/mfs.js",
-    "test": "npm run test-mfs",
+    "test": "node tests/mfs.js",
     "lint": "./node_modules/.bin/standard"
   },
   "repository": {
@@ -42,7 +39,7 @@
   "dependencies": {
     "async": "^1.2.0",
     "base58-native": "^0.1.4",
-    "ipfs-api": "github:ipfs/js-ipfs-api#ba85b3b",
+    "ipfs-api": "github:ipfs/js-ipfs-api#2938470",
     "multihashes": "^0.2.0"
   }
 }
