--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "node tests/blob-store-test.js",
-    "lint": "./node_modules/.bin/standard"
+    "lint": "standard"
   },
   "repository": {
     "type": "git",
@@ -29,15 +29,15 @@
   "homepage": "https://github.com/ipfs/ipfs-blob-store",
   "devDependencies": {
     "abstract-blob-store": "^3.2.0",
-    "ipfsd-ctl": "^0.9.1",
-    "pre-commit": "^1.0.6",
-    "tape": "^4.5.1"
+    "ipfsd-ctl": "^0.14.0",
+    "pre-commit": "^1.1.3",
+    "tape": "^4.6.0"
   },
   "pre-commit": [
     "test",
     "lint"
   ],
   "dependencies": {
-    "ipfs-api": "3.0.0"
+    "ipfs-api": "6.0.1"
   }
 }
