--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "aegir": "^15.0.0",
     "ipfs": "~0.31.4",
     "ipfsd-ctl": "~0.39.1",
-    "tape": "^4.8.0"
+    "tape": "^4.8.0",
+    "which": "^1.3.1"
   },
   "dependencies": {
     "debug": "^3.1.0",
