--- a/package.json
+++ b/package.json
@@ -28,9 +28,13 @@
   ],
   "author": "IPFS",
   "contributors": [
-    "David Dias <daviddias@ipfs.io> (http://daviddias.me)",
-    "Travis Person <travis.person@gmail.com> (http://travisperson.com)",
-    "Henrique Dias <hacdias@gmail.com> (https://hacdias.com)"
+    "David Dias <daviddias.p@gmail.com>",
+    "Friedel Ziegelmayer <dignifiedquire@gmail.com>",
+    "Henrique Dias <hacdias@gmail.com>",
+    "Richard Littauer <richard.littauer@gmail.com>",
+    "Stephen Whitmore <noffle@users.noreply.github.com>",
+    "Travis Person <travis.person@gmail.com>",
+    "achingbrain <alex@achingbrain.net>"
   ],
   "license": "MIT",
   "bugs": {
